--- a/src/scripts/tpls/other/detail.html
+++ b/src/scripts/tpls/other/detail.html
@@ -11,6 +11,7 @@
 						    <div class="swiper-slide"><img src="http://img01.hua.com/uploadpic/newpic/9012147.jpg" alt="" /></div>
 						    <div class="swiper-slide"><img src="http://img01.hua.com/uploadpic/newpic/9012147.jpg" alt="" /></div>
 						</div>
+						<div class="swiper-pagination"></div>
 					</div>
 					<div class="addcart">
 						<span>￥129</span>
@@ -19,7 +20,7 @@
 					<div class="details">
 						<a href="#">
 							<p>纯美时光-戴安娜粉玫瑰11枝，搭配白色满天星栀子叶 <span>新品</span></p>
-							<span>&gt;</span>
+							<span class="iconfont">&#xe679;</span>
 						</a>
 					</div>
 				</section>
@@ -38,7 +39,7 @@
 						<li><span>说明：</span>特惠价！</li>
 					</ul>
 					
-					<span>更多图文详情&gt;</span>
+					<span>更多图文详情 <i class="iconfont">&#xe679;</i>	</span>
 				</section>
 				<div class="kongbai"></div>
 				<section class="contact"> 
@@ -86,8 +87,8 @@
 				<div class="kongbai"></div>
 				<section class="Story">
 					<div class="title">
-						<h3>订单实拍秀<span>（由加盟店配送前拍取）</span></h3>
-						<i>&gt;</i>
+						<h3><b>订单实拍秀</b><span>（由加盟店配送前拍取）</span></h3>
+						<i class="iconfont">&#xe679;</i>	
 					</div>
 					<div class="scroll-pai">
 						<ul>
@@ -118,8 +119,8 @@
 				<div class="kongbai"></div>
 				<section class="Story">
 					<div class="title">
-						<h3>送花故事<span>最近共<span>888</span>条</span></h3>
-						<i>&gt;</i>
+						<h3><b>送花故事</b><span>最近共<span>888</span>条</span></h3>
+						<i class="iconfont">&#xe679;</i>
 					</div>
 					<div class="list">
 						<div class="item">
