--- a/src/scripts/tpls/other/detail.html
+++ b/src/scripts/tpls/other/detail.html
@@ -86,7 +86,7 @@
 				
 				<div class="kongbai"></div>
 				<section class="Story">
-					<div class="title">
+					<div id="show" class=" title">
 						<h3><b>订单实拍秀</b><span>（由加盟店配送前拍取）</span></h3>
 						<i class="iconfont">&#xe679;</i>	
 					</div>
@@ -118,7 +118,7 @@
 				
 				<div class="kongbai"></div>
 				<section class="Story">
-					<div class="title">
+					<div id="story" class="title">
 						<h3><b>送花故事</b><span>最近共<span>888</span>条</span></h3>
 						<i class="iconfont">&#xe679;</i>
 					</div>
