--- a/src/scripts/tpls/other/cart.html
+++ b/src/scripts/tpls/other/cart.html
@@ -1,2 +1,63 @@
-<!--  -->
-cart  购物车页面
+<div class="container">
+	
+	<div class="deScoll">
+		<div class="deScoll-box">
+		
+			<header>等待</header>
+			
+			<div class="liubai"></div>
+			
+			<!-- 结算 -->
+			<div class="clearing">
+				<div>共1件商品</div>
+				<div><span>继续挑选 | </span><span>去结算</span></div>
+			</div>
+			
+			
+			<!-- 购物车列表 -->
+			<ul class="splist">
+				<li>
+					<div><img src="http://img01.hua.com/uploadpic/newpic/9012147.jpg_80x87.jpg" alt=""/></div>
+					<div>
+						<h3><span>[鲜花]</span><a href="#">纯美时光</a></h3>
+						<p>现价: <span > ￥129</span></p>
+						<p>数量：<span>-</span><span><input type="text" value="1"/></span><span>+</span></p>
+					</div>
+					<div class="del"><i></i></div>
+				</li>
+			</ul>
+			
+			<!-- total 总共 -->
+			<div class="goumai">
+				<div class="total"><span>合计:</span><i>￥129</i></div>
+				<div class="goclearing">去结算</div>
+			</div>
+			
+			
+			
+			<!-- 搭配 -->
+			<div class="match">
+				<h3>搭配以下商品，可与鲜花同时送达：</h3>
+				<ul>
+					<li>
+						<img src="http://img01.hua.com/uploadpic/images/20147211744696762.jpg" alt=""/>
+						<p>德芙心语:98g铁盒或109克礼盒</p>
+						<span>￥68</span>
+					</li>
+					<li>
+						<img src="http://img01.hua.com/uploadpic/images/20147211744696762.jpg" alt=""/>
+						<p>德芙心语:98g铁盒或109克礼盒</p>
+						<span>￥68</span>
+					</li>
+					<li>
+						<img src="http://img01.hua.com/uploadpic/images/20147211744696762.jpg" alt=""/>
+						<p>德芙心语:98g铁盒或109克礼盒</p>
+						<span>￥68</span>
+					</li>
+				</ul>
+			</div>
+			
+			<footer>等待</footer>
+		</div>
+	</div>
+</div>
