--- a/src/scripts/tpls/other/alldetail.html
+++ b/src/scripts/tpls/other/alldetail.html
@@ -1,20 +1,5 @@
 <div class="container">
 		
-		<header id="header">
-		<ul>
-			<li><i class="iconfont">&#xe679;</i> </li>
-			<li>购物车</li> 
-			<li> <i class="iconfont">&#xe7ad;</i> </li>
-		</ul>
-	</header>
-	<nav>
-		<ul>
-			<li><a href="#"><span class="iconfont">&#xe6b8;</span><i>首页</i></a></li>
-			<li><a href="#"><span class="iconfont">&#xe6fe;</span><i>分类搜索</i></a></li>
-			<li><a href="#"><span class="iconfont">&#xe6af;</span><i>购物车</i></a></li>
-			<li><a href="#"><span class="iconfont">&#xe736;</span><i>我的</i></a></li>
-		</ul>
-	</nav>
 	<div class="deScoll">
 		<div class="deScoll-box">
 			<ul class="delist">
@@ -95,6 +80,7 @@
 					</div>
 				</div>
 			</div>
+			<footer></footer>
 		</div>
 		
 	</div>
