--- a/src/scripts/tpls/other/detail.html
+++ b/src/scripts/tpls/other/detail.html
@@ -1,6 +1,6 @@
 <div class="container">
 		
-		<header id="header">
+		<!--<header id="header">
 		<ul>
 			<li><i class="iconfont">&#xe679;</i> </li>
 			<li>购物车</li> 
@@ -14,7 +14,7 @@
 			<li><a href="#"><span class="iconfont">&#xe6af;</span><i>购物车</i></a></li>
 			<li><a href="#"><span class="iconfont">&#xe736;</span><i>我的</i></a></li>
 		</ul>
-	</nav>
+	</nav>-->
 	
 	<div class="deScoll">
 		<div class="deScoll-box">
